feat/db_metric: add db_metric

--- a/main/Dockerfile
+++ b/main/Dockerfile
@@ -1,5 +1,4 @@
-#!/bin/bash
 FROM alpine
-COPY k3s-bluetooth-device-demo /usr/bin/
-CMD ["k3s-bluetooth-device-demo"]
+COPY k3s-bluetooth-device-demo /bin/
+CMD /bin/k3s-bluetooth-device-demo
 
