--- a/db_metrics/main/Makefile
+++ b/db_metrics/main/Makefile
@@ -1,8 +1,10 @@
 SHELL = /bin/bash
 
 build:
-       @GOOS=linux CGO_ENABLED=0 GOARCH=arm go build -o db-metrics main.go
-       @docker build -t gopherlv/db-metrics:arm .
-       @rm db-metrics
+	@GOOS=linux CGO_ENABLED=0 GOARCH=arm go build -o db-metrics main.go
+	@docker build -t gopherlv/db-metrics .
+	@rm db-metrics
+
 push: build
-       @docker push gopherlv/db-metrics:arm
+	@docker push gopherlv/db-metrics:latest
+
